Updated handling of TCP sessions, attempted to implement error handling and error code transmission. Sending errors to teamserver currently results in RSA decrypt BadPaddingEdxception on teamserver